samples/_failures_safe/1761538898_4db93e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f29022c4.c: In function ‘main’:
./samples/SAFE/__tmp_f29022c4.c:151:63: error: expected ‘)’ at end of input
  151 |     mat2.cols = read_int("Enter number of columns (1-10): ", 1
      |                         ~                                     ^
      |                                                               )
./samples/SAFE/__tmp_f29022c4.c:151:17: error: too few arguments to function ‘read_int’
  151 |     mat2.cols = read_int("Enter number of columns (1-10): ", 1
      |                 ^~~~~~~~
./samples/SAFE/__tmp_f29022c4.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_f29022c4.c:151:5: error: expected declaration or statement at end of input
  151 |     mat2.cols = read_int("Enter number of columns (1-10): ", 1
      |     ^~~~
